# example-dedalus-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  _client.py  _client_copy.py  client.py  db.py  gh.py  main.py  server.py  smoke.py  weather.py
